PROJECT(VELO)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6) 
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -std=c++0x")
SET(LIBVELO_SRC sensorDevice.cpp UDPServer.cpp LiDAR.cpp velodyneHDL32E.cpp)
ADD_LIBRARY(Velodyne SHARED ${LIBVELO_SRC})
SET_TARGET_PROPERTIES(Velodyne PROPERTIES CLEAN_DIRECT_OUTPUT 1)

ADD_LIBRARY(Velodyne_static STATIC ${LIBVELO_SRC})
SET_TARGET_PROPERTIES(Velodyne_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(Velodyne_static PROPERTIES OUTPUT_NAME "Velodyne")

